@@ -1,10 +1,11 @@
 package ru.yandex.practicum.shop.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import ru.yandex.practicum.shop.client.model.PaymentStatus;
 import ru.yandex.practicum.shop.dto.ItemDto;
 import ru.yandex.practicum.shop.dto.OrderDto;
 import ru.yandex.practicum.shop.model.Order;
@@ -12,9 +13,11 @@ import ru.yandex.practicum.shop.model.OrderItem;
 import ru.yandex.practicum.shop.repository.OrderItemRepository;
 import ru.yandex.practicum.shop.repository.OrderRepository;
 
-import java.util.ArrayList;
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class OrderService {
@@ -23,6 +26,7 @@ public class OrderService {
     private final OrderItemRepository orderItemRepository;
     private final CartService cartService;
     private final ItemService itemService;
+    private final PaymentService paymentService;
 
     @Transactional
     public Mono<OrderDto> createOrder(String sessionId) {
@@ -32,41 +36,51 @@ public class OrderService {
                         return Mono.error(new RuntimeException("Cart is empty"));
                     }
 
-                    long totalSum = 0;
-                    List<OrderItem> orderItems = new ArrayList<>();
+                    Long totalSum = cartItems.stream()
+                            .mapToLong(item ->item.getPrice()+item.getCount())
+                            .sum();
 
-                    for (ItemDto item : cartItems) {
-                        OrderItem orderItem = new OrderItem();
-                        orderItem.setItemId(item.getId());
-                        orderItem.setCount(item.getCount());
-                        orderItem.setPrice(item.getPrice());
+                    List<OrderItem> orderItems = cartItems.stream()
+                            .map(this::toOrderItem)
+                            .collect(Collectors.toList());
 
-                        totalSum += item.getPrice() * item.getCount();
-                        orderItems.add(orderItem);
-                    }
+                    return paymentService.createPayment(sessionId, totalSum)
+                            .flatMap(paymentStatus -> {
+                                if (paymentStatus.equals(PaymentStatus.ERROR)) {
+                                    return Mono.error(new IllegalStateException(
+                                            "Не удалось выполнить платеж. Недостаточно средств"));
+                                }
 
-                    Order order = new Order();
-                    order.setSessionId(sessionId);
-                    order.setItems(orderItems);
-                    order.setTotalSum(totalSum);
+                                Order order = new Order();
+                                order.setSessionId(sessionId);
+                                order.setItems(orderItems);
+                                order.setTotalSum(totalSum);
 
-                    return orderRepository.save(order)
-                            .flatMap(savedOrder -> {
-                                List<OrderItem> itemsWithOrderId = savedOrder.getItems().stream()
-                                        .peek(item -> item.setOrderId(savedOrder.getId()))
-                                        .toList();
+                                return orderRepository.save(order)
+                                        .flatMap(savedOrder -> {
+                                            List<OrderItem> itemsWithOrderId = savedOrder.getItems().stream()
+                                                    .peek(item -> item.setOrderId(savedOrder.getId()))
+                                                    .collect(Collectors.toList());
 
-                                return orderItemRepository.saveAll(itemsWithOrderId)
-                                        .collectList()
-                                        .thenReturn(savedOrder);
-                            })
-                            .map(savedOrder -> toDto(savedOrder, cartItems))
-                            .flatMap(dto -> {
-                                return Flux.fromIterable(cartItems)
-                                        .flatMap(item -> cartService.removeItem(sessionId, item.getId()))
-                                        .then(Mono.just(dto));
+                                            return orderItemRepository.saveAll(itemsWithOrderId)
+                                                    .collectList()
+                                                    .thenReturn(savedOrder);
+                                        })
+                                        .map(savedOrder -> toDto(savedOrder, cartItems))
+                                        .flatMap(dto -> cartService.removeAllItems(sessionId)
+                                                .thenReturn(dto));
                             });
-                });
+                })
+                .doOnSuccess(orderDto -> log.info("Order created successfully: {}", orderDto.getId()))
+                .doOnError(error -> log.error("Failed to create order for session: {}", sessionId, error));
+    }
+
+    private OrderItem toOrderItem(ItemDto item) {
+        OrderItem orderItem = new OrderItem();
+        orderItem.setItemId(item.getId());
+        orderItem.setCount(item.getCount());
+        orderItem.setPrice(item.getPrice());
+        return orderItem;
     }
 
     public Mono<List<OrderDto>> getAllOrders(String sessionId) {
